src/qt/multimedia/libqmediarecorder.bf

extension CQt
{
	[LinkName("QMediaRecorder_new")]
	public static extern void* QMediaRecorder_new();
	[LinkName("QMediaRecorder_new2")]
	public static extern void* QMediaRecorder_new2(void* parent);
	[LinkName("QMediaRecorder_MetaObject")]
	public static extern void* QMediaRecorder_MetaObject(void* c_this);
	[LinkName("QMediaRecorder_Metacast")]
	public static extern void* QMediaRecorder_Metacast(void* c_this, char8[] param1);
	[LinkName("QMediaRecorder_Metacall")]
	public static extern int32 QMediaRecorder_Metacall(void* c_this, int64 param1, int32 param2, void** param3);
	[LinkName("QMediaRecorder_Tr")]
	public static extern libqt_string QMediaRecorder_Tr(char8[] s);
	[LinkName("QMediaRecorder_IsAvailable")]
	public static extern bool QMediaRecorder_IsAvailable(void* c_this);
	[LinkName("QMediaRecorder_OutputLocation")]
	public static extern void QMediaRecorder_OutputLocation(void* c_this);
	[LinkName("QMediaRecorder_SetOutputLocation")]
	public static extern void QMediaRecorder_SetOutputLocation(void* c_this, void* location);
	[LinkName("QMediaRecorder_ActualLocation")]
	public static extern void QMediaRecorder_ActualLocation(void* c_this);
	[LinkName("QMediaRecorder_RecorderState")]
	public static extern int64 QMediaRecorder_RecorderState(void* c_this);
	[LinkName("QMediaRecorder_Error")]
	public static extern int64 QMediaRecorder_Error(void* c_this);
	[LinkName("QMediaRecorder_ErrorString")]
	public static extern libqt_string QMediaRecorder_ErrorString(void* c_this);
	[LinkName("QMediaRecorder_Duration")]
	public static extern int64 QMediaRecorder_Duration(void* c_this);
	[LinkName("QMediaRecorder_MediaFormat")]
	public static extern void QMediaRecorder_MediaFormat(void* c_this);
	[LinkName("QMediaRecorder_SetMediaFormat")]
	public static extern void QMediaRecorder_SetMediaFormat(void* c_this, void* format);
	[LinkName("QMediaRecorder_EncodingMode")]
	public static extern int64 QMediaRecorder_EncodingMode(void* c_this);
	[LinkName("QMediaRecorder_SetEncodingMode")]
	public static extern void QMediaRecorder_SetEncodingMode(void* c_this, int64 encodingMode);
	[LinkName("QMediaRecorder_Quality")]
	public static extern int64 QMediaRecorder_Quality(void* c_this);
	[LinkName("QMediaRecorder_SetQuality")]
	public static extern void QMediaRecorder_SetQuality(void* c_this, int64 quality);
	[LinkName("QMediaRecorder_VideoResolution")]
	public static extern void QMediaRecorder_VideoResolution(void* c_this);
	[LinkName("QMediaRecorder_SetVideoResolution")]
	public static extern void QMediaRecorder_SetVideoResolution(void* c_this, void* videoResolution);
	[LinkName("QMediaRecorder_SetVideoResolution2")]
	public static extern void QMediaRecorder_SetVideoResolution2(void* c_this, int32 width, int32 height);
	[LinkName("QMediaRecorder_VideoFrameRate")]
	public static extern double QMediaRecorder_VideoFrameRate(void* c_this);
	[LinkName("QMediaRecorder_SetVideoFrameRate")]
	public static extern void QMediaRecorder_SetVideoFrameRate(void* c_this, double frameRate);
	[LinkName("QMediaRecorder_VideoBitRate")]
	public static extern int32 QMediaRecorder_VideoBitRate(void* c_this);
	[LinkName("QMediaRecorder_SetVideoBitRate")]
	public static extern void QMediaRecorder_SetVideoBitRate(void* c_this, int32 bitRate);
	[LinkName("QMediaRecorder_AudioBitRate")]
	public static extern int32 QMediaRecorder_AudioBitRate(void* c_this);
	[LinkName("QMediaRecorder_SetAudioBitRate")]
	public static extern void QMediaRecorder_SetAudioBitRate(void* c_this, int32 bitRate);
	[LinkName("QMediaRecorder_AudioChannelCount")]
	public static extern int32 QMediaRecorder_AudioChannelCount(void* c_this);
	[LinkName("QMediaRecorder_SetAudioChannelCount")]
	public static extern void QMediaRecorder_SetAudioChannelCount(void* c_this, int32 channels);
	[LinkName("QMediaRecorder_AudioSampleRate")]
	public static extern int32 QMediaRecorder_AudioSampleRate(void* c_this);
	[LinkName("QMediaRecorder_SetAudioSampleRate")]
	public static extern void QMediaRecorder_SetAudioSampleRate(void* c_this, int32 sampleRate);
	[LinkName("QMediaRecorder_MetaData")]
	public static extern void QMediaRecorder_MetaData(void* c_this);
	[LinkName("QMediaRecorder_SetMetaData")]
	public static extern void QMediaRecorder_SetMetaData(void* c_this, void* metaData);
	[LinkName("QMediaRecorder_AddMetaData")]
	public static extern void QMediaRecorder_AddMetaData(void* c_this, void* metaData);
	[LinkName("QMediaRecorder_CaptureSession")]
	public static extern void* QMediaRecorder_CaptureSession(void* c_this);
	[LinkName("QMediaRecorder_Record")]
	public static extern void QMediaRecorder_Record(void* c_this);
	[LinkName("QMediaRecorder_Pause")]
	public static extern void QMediaRecorder_Pause(void* c_this);
	[LinkName("QMediaRecorder_Stop")]
	public static extern void QMediaRecorder_Stop(void* c_this);
	[LinkName("QMediaRecorder_Connect_RecorderStateChanged")]
	public static extern void QMediaRecorder_Connect_RecorderStateChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_DurationChanged")]
	public static extern void QMediaRecorder_Connect_DurationChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_ActualLocationChanged")]
	public static extern void QMediaRecorder_Connect_ActualLocationChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_EncoderSettingsChanged")]
	public static extern void QMediaRecorder_Connect_EncoderSettingsChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_ErrorOccurred")]
	public static extern void QMediaRecorder_Connect_ErrorOccurred(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_ErrorChanged")]
	public static extern void QMediaRecorder_Connect_ErrorChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_MetaDataChanged")]
	public static extern void QMediaRecorder_Connect_MetaDataChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_MediaFormatChanged")]
	public static extern void QMediaRecorder_Connect_MediaFormatChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_EncodingModeChanged")]
	public static extern void QMediaRecorder_Connect_EncodingModeChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_QualityChanged")]
	public static extern void QMediaRecorder_Connect_QualityChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_VideoResolutionChanged")]
	public static extern void QMediaRecorder_Connect_VideoResolutionChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_VideoFrameRateChanged")]
	public static extern void QMediaRecorder_Connect_VideoFrameRateChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_VideoBitRateChanged")]
	public static extern void QMediaRecorder_Connect_VideoBitRateChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_AudioBitRateChanged")]
	public static extern void QMediaRecorder_Connect_AudioBitRateChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_AudioChannelCountChanged")]
	public static extern void QMediaRecorder_Connect_AudioChannelCountChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Connect_AudioSampleRateChanged")]
	public static extern void QMediaRecorder_Connect_AudioSampleRateChanged(void* c_this, c_intptr slot);
	[LinkName("QMediaRecorder_Tr2")]
	public static extern libqt_string QMediaRecorder_Tr2(char8[] s, char8[] c);
	[LinkName("QMediaRecorder_Tr3")]
	public static extern libqt_string QMediaRecorder_Tr3(char8[] s, char8[] c, int32 n);
	/// Delete this object from C++ memory
	[LinkName("QMediaRecorder_Delete")]
	public static extern void QMediaRecorder_Delete(void* self);
}